# productionizing-video-diffusion-talk

./: README.md  benchmark.sh  benchmark_parallel.sh  benchmark_parallel_results.csv  benchmark_results.csv  commands.txt  compare_wan_backends.py  main.py  pyproject.toml  run_backend_comparison.sh  talk.md  wan2_text_to_video.py  wan2_text_to_video_parallel.py
