[project]
name = "production-video-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "imageio[ffmpeg]>=2.37.3",
    "peft>=0.19.1",
    "sageattention>=1.0.6",
    "torch>=2.12.0",
    "torchao>=0.17.0",
    "transformers>=5.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchao = [{ index = "pytorch-cu130" }]
